# LogX

./: CMakeLists.txt  README.md
include/logx/: AbstractLogger.h  CLogger.h  Logger.h  WLogger.h  defines.h  logx.h
src/: CLogger.cpp  Logger.cpp  WLogger.cpp
